// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserDetailsPanel/> no principal 1`] = `
<div
  className="panel panel-default"
>
  <div
    className="panel-heading"
  >
    User Details
  </div>
  <div
    className="panel-body"
  >
    <div>
      No user selected.
    </div>
  </div>
</div>
`;

exports[`<UserDetailsPanel/> with principal and buttons 1`] = `
<div
  className="panel panel-default"
>
  <div
    className="panel-heading"
  >
    <span>
      cnathe
    </span>
  </div>
  <div
    className="panel-body"
  >
    <div
      className="row"
    >
      <div
        className="principal-detail-label col-xs-4"
      >
        Email
      </div>
      <div
        className="principal-detail-value col-xs-8"
      >
        cnathe@labkey.com
      </div>
    </div>
    <hr
      className="principal-hr"
    />
    <div
      className="row"
    >
      <div
        className="principal-detail-label col-xs-4"
      >
        Last Login
      </div>
      <div
        className="principal-detail-value col-xs-8"
      >
        2020-01-06 15:30
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="principal-detail-label col-xs-4"
      >
        Created
      </div>
      <div
        className="principal-detail-value col-xs-8"
      >
        2017-05-08 08:43
      </div>
    </div>
    <hr
      className="principal-hr"
    />
    <div
      className="row"
    >
      <div
        className="principal-detail-label col-xs-4"
      >
        User ID
      </div>
      <div
        className="principal-detail-value col-xs-8"
      >
        1004
      </div>
    </div>
    <hr
      className="principal-hr"
    />
    <button
      className="pull-right btn btn-default"
      disabled={false}
      onClick={[Function]}
      style={
        {
          "marginLeft": "10px",
        }
      }
      type="button"
    >
      Delete
    </button>
    <button
      className="pull-right btn btn-default"
      disabled={false}
      onClick={[Function]}
      style={
        {
          "marginLeft": "10px",
        }
      }
      type="button"
    >
      Reactivate
    </button>
  </div>
</div>
`;

exports[`<UserDetailsPanel/> with principal and buttons not allowDelete or allowResetPassword 1`] = `
<div
  className="panel panel-default"
>
  <div
    className="panel-heading"
  >
    <span>
      cnathe
    </span>
  </div>
  <div
    className="panel-body"
  >
    <div
      className="row"
    >
      <div
        className="principal-detail-label col-xs-4"
      >
        Email
      </div>
      <div
        className="principal-detail-value col-xs-8"
      >
        cnathe@labkey.com
      </div>
    </div>
    <hr
      className="principal-hr"
    />
    <div
      className="row"
    >
      <div
        className="principal-detail-label col-xs-4"
      >
        Last Login
      </div>
      <div
        className="principal-detail-value col-xs-8"
      >
        2020-01-06 15:30
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="principal-detail-label col-xs-4"
      >
        Created
      </div>
      <div
        className="principal-detail-value col-xs-8"
      >
        2017-05-08 08:43
      </div>
    </div>
    <hr
      className="principal-hr"
    />
    <div
      className="row"
    >
      <div
        className="principal-detail-label col-xs-4"
      >
        User ID
      </div>
      <div
        className="principal-detail-value col-xs-8"
      >
        1004
      </div>
    </div>
    <hr
      className="principal-hr"
    />
    <button
      className="pull-right btn btn-default"
      disabled={false}
      onClick={[Function]}
      style={
        {
          "marginLeft": "10px",
        }
      }
      type="button"
    >
      Reactivate
    </button>
  </div>
</div>
`;

exports[`<UserDetailsPanel/> with principal no buttons because of self 1`] = `
<div
  className="panel panel-default"
>
  <div
    className="panel-heading"
  >
    <span>
      cnathe
    </span>
  </div>
  <div
    className="panel-body"
  >
    <div
      className="row"
    >
      <div
        className="principal-detail-label col-xs-4"
      >
        Email
      </div>
      <div
        className="principal-detail-value col-xs-8"
      >
        cnathe@labkey.com
      </div>
    </div>
    <hr
      className="principal-hr"
    />
    <div
      className="row"
    >
      <div
        className="principal-detail-label col-xs-4"
      >
        Last Login
      </div>
      <div
        className="principal-detail-value col-xs-8"
      >
        2020-01-06 15:30
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="principal-detail-label col-xs-4"
      >
        Created
      </div>
      <div
        className="principal-detail-value col-xs-8"
      >
        2017-05-08 08:43
      </div>
    </div>
    <hr
      className="principal-hr"
    />
    <div
      className="row"
    >
      <div
        className="principal-detail-label col-xs-4"
      >
        User ID
      </div>
      <div
        className="principal-detail-value col-xs-8"
      >
        1004
      </div>
    </div>
    <hr
      className="principal-hr"
    />
    <div
      className="row"
    >
      <div
        className="principal-detail-label col-xs-4"
      >
        Permissions
      </div>
      <div
        className="principal-detail-value col-xs-8"
      >
        <ul
          className="principal-detail-ul"
        >
          <li
            className="principal-detail-li"
          >
            Editor
          </li>
          <li
            className="principal-detail-li"
          >
            Folder Administrator
          </li>
          <li
            className="principal-detail-li"
          >
            Project Administrator
          </li>
          <li
            className="principal-detail-li"
          >
            Reader
          </li>
          <li
            className="principal-detail-li"
          >
            Restricted Reader
          </li>
          <li
            className="principal-detail-li"
          >
            Submitter
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
